Windows attach logic failed to handle a failed open on a pipe

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 24
    • Affects Version/s: 24
    • Component/s: hotspot
    • svc
    • b24
    • windows

      [stress.process.out] [1604.409s][error][attach] could not open (2) pipe \\\\.\\pipe\\javatool-612134031
      [stress.process.out] #
      [stress.process.out] # A fatal error has been detected by the Java Runtime Environment:
      [stress.process.out] #
      [stress.process.out] # Internal Error (c:\\sb\\prod\\1730331883\\workspace\\open\\src\\hotspot\\os\\windows\\attachListener_windows.cpp:114), pid=18460, tid=24856
      [stress.process.out] # assert(opened()) failed: must be
      [stress.process.out] #
      [stress.process.out] # JRE version: Java(TM) SE Runtime Environment (24.0+22) (fastdebug build 24-ea+22-2644)
      [stress.process.out] # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 24-ea+22-2644, compiled mode, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)

      We log the fact we couldn't open the pipe but then assert it is open. Need to check the error handling logic.


      --------------- T H R E A D ---------------

      Current thread (0x000002257f8643b0): JavaThread "Attach Listener" daemon [_thread_blocked, id=24856, stack(0x000000dbf8200000,0x000000dbf8300000) (1024K)]

      Stack: [0x000000dbf8200000,0x000000dbf8300000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xd06c01] os::win32::platform_print_native_stack+0x101 (os_windows_x86.cpp:235)
      V [jvm.dll+0xfd2532] VMError::report+0x14b2 (vmError.cpp:1015)
      V [jvm.dll+0xfd4bad] VMError::report_and_die+0x80d (vmError.cpp:1850)
      V [jvm.dll+0xfd52b4] VMError::report_and_die+0x64 (vmError.cpp:1615)
      V [jvm.dll+0x59f84b] report_vm_error+0x5b (debug.cpp:193)
      V [jvm.dll+0x30a3ac] PipeChannel::write+0x7c (attachListener_windows.cpp:114)
      V [jvm.dll+0x30912e] AttachOperation::write_reply+0x7e (attachListener.cpp:676)
      V [jvm.dll+0x309709] Win32AttachOperation::complete+0x69 (attachListener_windows.cpp:428)
      V [jvm.dll+0x308eba] AttachListenerThread::thread_entry+0x1da (attachListener.cpp:472)
      V [jvm.dll+0x867876] JavaThread::thread_main_inner+0x266 (javaThread.cpp:760)
      V [jvm.dll+0xf33264] Thread::call_run+0x1b4 (thread.cpp:239)
      V [jvm.dll+0xd05267] thread_native_entry+0xd7 (os_windows.cpp:554)
      C [ucrtbase.dll+0x2268a] (no source info available)
      C [KERNEL32.DLL+0x17ac4] (no source info available)
      C [ntdll.dll+0x5a4e1] (no source info available)

            Assignee:
            Alex Menkov
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: