8343344: Windows attach logic failed to handle a failed open on a pipe

Reviewed-by: kevinw, cjplummer